# minidb-rs

./: Cargo.toml  README.md
examples/: btree-all.rs  btree-create.rs  btree-large-query.rs  btree-large.rs  btree-query.rs  btree-range.rs  simple-table-all.rs  simple-table-create.rs  simple-table-exact.rs  simple-table-plan.rs  simple-table-range.rs  simple-table-scan.rs  table-create.rs  table-index.rs  table-large.rs
src/: bsearch.rs  buffer.rs  disk.rs  memcmpable.rs  query.rs  table.rs
