[package]
name = "minidb-rs"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
zerocopy = "0.3"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.1"
md-5 = "0.9"